remove node modules

--- a/render.yaml
+++ b/render.yaml
@@ -2,133 +2,7 @@ version: 1
 
 services:
   - type: web
-    name: user-service
-    runtime: node
-    repo: https://github.com/bingsu1103/BingEdu-BE-Microservice
-    branch: main
-    envVars:
-      - key: PORT
-        value: 8000
-    buildCommand: npm install
-    startCommand: npm start
-    autoDeploy: true
-    healthCheckPath: /
-    rootDir: user-service
-
-  - type: web
-    name: auth-service
-    runtime: node
-    repo: https://github.com/bingsu1103/BingEdu-BE-Microservice
-    branch: main
-    envVars:
-      - key: PORT
-        value: 8001
-    buildCommand: npm install
-    startCommand: npm start
-    autoDeploy: true
-    healthCheckPath: /
-    rootDir: auth-service
-
-  - type: web
-    name: course-service
-    runtime: node
-    repo: https://github.com/bingsu1103/BingEdu-BE-Microservice
-    branch: main
-    envVars:
-      - key: PORT
-        value: 8002
-    buildCommand: npm install
-    startCommand: npm start
-    autoDeploy: true
-    healthCheckPath: /
-    rootDir: course-service
-
-  - type: web
-    name: upload-service
-    runtime: node
-    repo: https://github.com/bingsu1103/BingEdu-BE-Microservice
-    branch: main
-    envVars:
-      - key: PORT
-        value: 8003
-    buildCommand: npm install
-    startCommand: npm start
-    autoDeploy: true
-    healthCheckPath: /
-    rootDir: upload-service
-
-  - type: web
-    name: lesson-service
-    runtime: node
-    repo: https://github.com/bingsu1103/BingEdu-BE-Microservice
-    branch: main
-    envVars:
-      - key: PORT
-        value: 8004
-    buildCommand: npm install
-    startCommand: npm start
-    autoDeploy: true
-    healthCheckPath: /
-    rootDir: lesson-service
-
-  - type: web
-    name: question-service
-    runtime: node
-    repo: https://github.com/bingsu1103/BingEdu-BE-Microservice
-    branch: main
-    envVars:
-      - key: PORT
-        value: 8005
-    buildCommand: npm install
-    startCommand: npm start
-    autoDeploy: true
-    healthCheckPath: /
-    rootDir: question-service
-
-  - type: web
-    name: answer-service
-    runtime: node
-    repo: https://github.com/bingsu1103/BingEdu-BE-Microservice
-    branch: main
-    envVars:
-      - key: PORT
-        value: 8006
-    buildCommand: npm install
-    startCommand: npm start
-    autoDeploy: true
-    healthCheckPath: /
-    rootDir: answer-service
-
-  - type: web
-    name: review-service
-    runtime: node
-    repo: https://github.com/bingsu1103/BingEdu-BE-Microservice
-    branch: main
-    envVars:
-      - key: PORT
-        value: 8007
-    buildCommand: npm install
-    startCommand: npm start
-    autoDeploy: true
-    healthCheckPath: /
-    rootDir: review-service
-
-  - type: web
-    name: progress-service
-    runtime: node
-    repo: https://github.com/bingsu1103/BingEdu-BE-Microservice
-    branch: main
-    envVars:
-      - key: PORT
-        value: 8008
-    buildCommand: npm install
-    startCommand: npm start
-    autoDeploy: true
-    healthCheckPath: /
-    rootDir: progress-service
-
-  - type: web
-    name: api-gateway
+    name: bingedu-server
     runtime: node
     repo: https://github.com/bingsu1103/BingEdu-BE-Microservice
     branch: main
