--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.11.0",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.16.3"
+    "mongoose": "^8.16.3",
+    "qs": "^6.14.0",
+    "vnpay": "^2.4.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
