--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "api-query-params": "^6.0.1",
     "axios": "^1.11.0",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.0",
